<resources>
    <!-- Activity names -->
    <string name="app_name">Book Search</string>
    <string name="name_BookListActivity">Search Results</string>

    <!-- Strings for activity_main -->
    <string name="search_Button">Search</string>
    <string name="clear_button">x</string>
    <string name="search_title_EditText">Search Title...</string>
    <string name="search_author_EditText">Search Author...</string>

    <!-- Explanation to the user on populating the list -->
    <string name="defaultTextView">Please enter a book title and/or an author in order to
        search Google Books and present you with the books matching your search query.</string>

    <!-- Error Messages -->
    <string name="no_internet">No internet connection</string>
    <string name="no_books">No books found!</string>

    <!-- Titles & Placeholders -->
    <string name="book_title">Book Title: </string>
    <string name="author">Author: </string>
    <string name="total_pages">Pages: </string>
    <string name="language">Language: </string>
    <string name="description">Description: </string>

    <!-- Text for Spinner -->
    <string name="spinner_text">Number of results: </string>

    <!-- Options for Spinner -->
    <string name="spinner_default_value">5</string>
    <string-array name="spinner_options">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
    </string-array>
</resources>
