<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.booklisting.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- We add focusable and focusableInTouchMode to stop the EditTexts from gaining focus on
    startup -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">


        <ImageView
            android:layout_width="@dimen/width_height_image"
            android:layout_height="@dimen/width_height_image"
            android:layout_gravity="center"
            android:src="@drawable/main_image_transparent_grey"
            style="@style/main_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextView"
            style="@style/default_TextView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/editText_Container">

            <EditText
                android:id="@+id/search_title_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="@string/search_title_EditText"/>

            <Button
                android:id="@+id/clear_title_button"
                android:layout_width="@dimen/width_height_clear_button"
                android:layout_height="@dimen/width_height_clear_button"
                style="@style/clear_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/editText_Container">

            <EditText
                android:id="@+id/search_author_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="@string/search_author_EditText"/>

            <Button
                android:id="@+id/clear_author_button"
                android:layout_width="@dimen/width_height_clear_button"
                android:layout_height="@dimen/width_height_clear_button"
                style="@style/clear_button"/>
        </LinearLayout>

        <Button
            android:id="@+id/search_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_Button"
            style="@style/search_button"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/spinner_Container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spinner_text"
                android:layout_gravity="center"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/spinner"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>
